--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 </head>
 <body>
     <header id="menu">
-        <h1>Welcome to zipr</h1>
+        <h1>Welcome to Christine's car sale</h1>
     </header>
+    <div class ="container">
+        <form id="car-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name">
+            <label for="name">Image URL</label>
+            <input type="text" id="image_url" name="id">
+            <label for="description">Description</label>
+            <textarea id="description" name="description"></textarea>
+            <button id="btn" type="submit">Sale car</button>
+        </form>
+        <ul id="car-list"class="cards"></ul>
+    </div>
     
 </body>
 </html>
