--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script  defer src="index.js"></script>
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="./assets/main.css"/>
     <title>Christine's car sale</title>
 </head>
 <body>
