--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
     <header id="menu">
         <h1>Welcome to Christine's car sale</h1>
     </header>
+    <div class="nav">
+        <div class="carsale">
+            <a href="#"> Christine's car sale</a>
+        </div>
+        <div class="nav-list">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact Us</a></li>   
+            </ul>
+        </div>
+        <div class="btns">
+        <div class="loginlink">
+            <button><a href="#">Login</a></button>  
+         </div>
+        <div class="nav-button">
+          <button><a href="#">get Started</a></button>
+        </div>  
+    </div>
+     </div> 
+
     <div class ="container">
         <form id="car-form">
             <label for="name">Name</label>
