--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Christine's car sale</title>
 </head>
 <body>
-    <header id="menu">
+    <!-- <header id="menu">
         <h1>Welcome to Christine's car sale</h1>
-    </header>
+    </header> -->
     <div class="nav">
         <div class="carsale">
             <a href="#"> Christine's car sale</a>
@@ -34,7 +34,9 @@
     </div>
      </div> 
 
-    <div class ="container">
+   <div class="form">
+    <h2>Upload car here</h2>
+    <div class="container">
         <form id="car-form">
             <label for="name">Name</label>
             <input type="text" id="name" name="name">
@@ -44,8 +46,10 @@
             <textarea id="description" name="description"></textarea>
             <button id="btn" type="submit">Sale car</button>
         </form>
-        <ul id="car-list"class="cards"></ul>
     </div>
+    </div>
+        <ul id="car-list"class="cards"></ul>
+    
     
 </body>
 </html>
